# gitlab-cargo-audit

./: Cargo.toml  LICENSE-MIT  README.md
src/: cargo_audit.rs  main.rs  report.rs
