[package]
name = "gitlab-cargo-audit"
version = "0.2.1"
authors = ["David Coles <david.coles@sony.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
petgraph = "0.6"
rustsec = { version = "0.25", features = ["dependency-tree"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
