[package]
name = "gitlab-cargo-audit"
description = "Generate GitLab Dependency Scanning report using `cargo-audit`"
repository = "https://github.com/dcoles/gitlab-cargo-audit"
version = "0.6.0"
authors = ["David Coles <david.coles@sony.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argh = { version = "0.1.12" }
env_logger = "0.11.5"
petgraph = "0.6.4"
rustsec = { version = "0.30.0", features = ["dependency-tree"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.36", features = ["formatting"] }
